[gd_scene load_steps=8 format=2]

[ext_resource path="res://nodes/screens/screen.tscn" type="PackedScene" id=1]
[ext_resource path="res://nodes/screens/play-screen.gd" type="Script" id=2]
[ext_resource path="res://nodes/player.tscn" type="PackedScene" id=3]
[ext_resource path="res://nodes/dialog.tscn" type="PackedScene" id=4]
[ext_resource path="res://resources/pixel-rpg.tres" type="DynamicFont" id=5]
[ext_resource path="res://resources/menu-theme.tres" type="Theme" id=6]

[sub_resource type="StyleBoxFlat" id=1]
content_margin_left = 4.0
content_margin_right = 4.0
content_margin_top = 4.0
bg_color = Color( 0.6, 0.6, 0.6, 0 )

[node name="PlayScreen" instance=ExtResource( 1 )]
script = ExtResource( 2 )
Player = ExtResource( 3 )

[node name="Center" type="CenterContainer" parent="." index="0"]
margin_right = 180.0
margin_bottom = 180.0
mouse_filter = 2

[node name="Anchor" type="Control" parent="Center" index="0"]
margin_left = 24.0
margin_top = 24.0
margin_right = 156.0
margin_bottom = 156.0
grow_horizontal = 2
grow_vertical = 2
rect_min_size = Vector2( 132, 132 )
mouse_filter = 2

[node name="Navigation" type="Navigation2D" parent="Center/Anchor" index="0"]

[node name="Dialog" parent="." index="1" instance=ExtResource( 4 )]

[node name="Status" type="CanvasLayer" parent="." index="2"]

[node name="RescuedLabel" type="Label" parent="Status" index="0"]
anchor_top = 1.0
anchor_bottom = 1.0
margin_top = -16.0
margin_right = 40.0
custom_fonts/font = ExtResource( 5 )
custom_styles/normal = SubResource( 1 )
text = "0/0 rescued"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="UnstuckButton" type="Button" parent="Status" index="1"]
anchor_left = 1.0
anchor_right = 1.0
margin_left = -40.0
margin_bottom = 20.0
theme = ExtResource( 6 )
text = "unstuck?"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HopeLabel" type="Label" parent="Status" index="2"]
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -46.0
margin_top = -16.0
custom_fonts/font = ExtResource( 5 )
custom_styles/normal = SubResource( 1 )
text = "100 hope"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="RestartMusicTimer" type="Timer" parent="." index="3"]
wait_time = 15.0
one_shot = true

[node name="SurvivorDialogTimer" type="Timer" parent="." index="4"]
wait_time = 10.0
one_shot = true

[node name="UpdateStatusTimer" type="Timer" parent="." index="5"]
wait_time = 0.25
autostart = true

[node name="ChasePlayerTimer" type="Timer" parent="." index="6"]
wait_time = 0.25
autostart = true

[node name="DecayHopeTimer" type="Timer" parent="." index="7"]
wait_time = 5.0
autostart = true

[node name="UnstuckTimer" type="Timer" parent="." index="8"]
wait_time = 2.5
autostart = true

[connection signal="pressed" from="Status/UnstuckButton" to="." method="_on_UnstuckButton_pressed"]
[connection signal="timeout" from="RestartMusicTimer" to="." method="_on_RestartMusicTimer_timeout"]
[connection signal="timeout" from="SurvivorDialogTimer" to="." method="_on_SurvivorDialogTimer_timeout"]
[connection signal="timeout" from="UpdateStatusTimer" to="." method="_on_UpdateStatusTimer_timeout"]
[connection signal="timeout" from="ChasePlayerTimer" to="." method="_on_ChasePlayerTimer_timeout"]
[connection signal="timeout" from="DecayHopeTimer" to="." method="_on_DecayHopeTimer_timeout"]
[connection signal="timeout" from="UnstuckTimer" to="." method="_on_UnstuckTimer_timeout"]
